--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,12 +2,13 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .heroFull {
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
-  margin-right: calc(-50vw + 50%);
+  width: 100%;
+  margin: 0;
   /* Full viewport minus header (80px) */
   height: calc(100vh - 80px);
   min-height: 500px;
